tests/rosetta/out/Fortran/ackermann-function.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/ackermann-function.f90:8:3:

    8 |   main()
      |   1
Error: Unclassifiable statement at (1)
