tests/rosetta/out/Fortran/ackermann-function.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program ackermann_function
  implicit none
    character(len=100) :: s0
    character(len=100) :: s1
    character(len=100) :: s2
    character(len=100) :: s3
  call main()
  
  contains
  recursive integer function ackermann(m,n) result(res)
    integer, intent(in) :: m
    integer, intent(in) :: n
    if ((m == 0)) then
      res = (n + 1)
      return
    end if
    if ((n == 0)) then
      res = ackermann((m - 1),1)
      return
    end if
    res = ackermann((m - 1),ackermann(m,(n - 1)))
    return
  end function ackermann
  recursive subroutine main()
    write(s0,'(G0)') ackermann(0,0)
    print *, 'A(0, 0) = ' // s0
    write(s1,'(G0)') ackermann(1,2)
    print *, 'A(1, 2) = ' // s1
    write(s2,'(G0)') ackermann(2,4)
    print *, 'A(2, 4) = ' // s2
    write(s3,'(G0)') ackermann(3,4)
    print *, 'A(3, 4) = ' // s3
  end subroutine main
end program ackermann_function
